<resources>
    <string name="app_name">IFSUL HomeSync Connect</string>
    <string name="connection">Conexão</string>
    <string name="subscription">Inscrever</string>
    <string name="publish">Publicar</string>
    <string name="message">Mensagens</string>
    <string name="sala">Sala</string>
    <string name="banheiro">Banheiro</string>
    <string name="quarto1">Quarto 1</string>
    <string name="quarto2">Quarto 2</string>
    <string name="cozinha">Cozinha</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="client_id">Client ID</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="tls_ssl">TLS/SSL</string>
    <string name="true_str">True</string>
    <string name="false_str">False</string>
    <string name="topic">Topic</string>
    <string name="payload">Payload</string>
    <string name="qos">QoS</string>
    <string name="retained">Retained</string>
    <string name="subscribe">Subscribe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
</resources>